Rewrite spell-checking.

Make spell checking check only one language.
Add combobox to select speller on a per language base in language settings.

Currently it will check the selected column.
(It should offer the column titles in the menu instead.)

BUG: 171432
BUG: 236348
BUG: 252690
BUG: 269386
FIXED-IN: KDE 4.7.0